[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
clap = { version = "4.5.23", features = ["derive"] }
miette = { version = "7.4.0", features = ["fancy", "serde", "syntect-highlighter"] }
thiserror = "1.0.38"                             # error handling
